tests/purs/failing/OverlapAcrossModulesUnnamedInstance/Class.purs
module OverlapAcrossModules.Class where
class C x y
